deployment/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    name: nginx-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.theiris.club
      secretName: nginx-secret
  rules:
  - host: nginx.theiris.club
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
